THRIFT-3378 c_glib service does not handle negative Thrift byte values correctly

This closes #644